--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
 .App{
   height: 100vh;
   width: 100vw;
-  background: url(assets/blue-cloudy-watercolor-background.jpg) no-repeat;
   background-size: cover;
 }
 
@@ -19,7 +18,7 @@
 .input-search{
   width: 50%;
   height: 100%;
-  border: 1px solid #f2f2f2;
+  border: 1px solid #00000040;
   border-radius: 7px;
   transition: 300ms ease;
   font-size: 14pt;
