--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 *{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .App{
@@ -11,8 +12,10 @@
 
 .input-search-div{
   width: 100vw;
-  height: 6vh;
-  padding: 3vh 3vw;
+  height: 11vh;
+  padding: 2vh 5vw;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .input-search{
