--- a/src/App.css
+++ b/src/App.css
@@ -80,64 +80,6 @@ i{
   gap: 2.5vh;
 }
 
-.location-current{
-  background-color: rgba(255, 255, 255, 0.397);
-  border-radius: 7px;
-  height: 40%;
-  width: 100%;
-  border: 1px solid #19191920;
-}
-
-/* .location-current *{
-  border: 1px solid tomato;
-} */
-
-.location-current > div{
-  width: 100%;
-}
-
-.location{
-  width: 100%;
-  height: 15%;
-  padding: 0 2vh;
-}
-
-.location > p{
-  min-width: 20%;
-  font-size: 90%;
-  color: #ffffffc4;
-  transform: translate(4%, -18%);
-}
-
-.current{
-width: 50%;
-height: 85%;
-padding: 2% 4%;
-}
-
-.current-temp{
-  font-size: 60pt;
-  display: flex;
-}
-
-.current-temp span{
-  font-size: 24pt;
-  margin-top: 1.5vh;
-}
-
-.forecast-content{
-  width: 50%;
-}
-
-/* .forecast-content *{
-  border: 1px solid tomato;
-} */
-
-.bi-sunrise-fill,
-.bi-sunset-fill{
-  font-size: 30pt;
-}
-
 .day-and-hours{
   width: 100%;
   height: 60%;
@@ -145,6 +87,22 @@ padding: 2% 4%;
   border-radius: 7px;
   box-shadow: 4px 4px 15px #25252520;
   border: 1px solid #19191920;
+  padding: 2vh;
+}
+
+/* .day-and-hours *{
+  border: 1px solid tomato;
+} */
+
+.day-and-hours-box{
+  width: 100%;
+  height: 85%;
+}
+
+.days-box{
+  width: 100%;
+  display: flex;
+  
 }
 
 .secondary-content{
