--- a/src/components/LocationCurrent/style.css
+++ b/src/components/LocationCurrent/style.css
@@ -1,5 +1,5 @@
 .location-current{
-    background-color: rgba(255, 255, 255, 0.397);
+    background-color: #ffffff83;
     border-radius: 7px;
     height: 40%;
     width: 100%;
