corrigido o campo de próximos dias
escondido o gráfico para telas HD, incluído a exibição do ícone, e do dia da semana e data formatada pt-BR

--- a/src/components/Chart/styles.css
+++ b/src/components/Chart/styles.css
@@ -7,3 +7,15 @@
     margin-left: 4%;
     background-color: #FFF;
 }
+
+@media (min-width: 1890px) {
+    .chart{
+        height: 50%;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1400px) {
+    .chart{
+        display: none;
+    }
+}
