--- a/src/components/Hourly/styles.css
+++ b/src/components/Hourly/styles.css
@@ -6,6 +6,7 @@
 
 .hour-info {
   max-width: 15vw;
+  border-right: 1px solid #f2f2f280;
 }
 
 #arrow-prev{
@@ -13,8 +14,6 @@
   width: fit-content;
   height: fit-content;
 }
-
-.hour-info * {}
 
 @media (min-width: 1799px) {
 
@@ -29,5 +28,15 @@
 
   .hour-info *{
     line-height: 250%;
+  }
+
+  .hour-info:nth-of-type(5n){
+    border-right: none;
+  }
+}
+
+@media (max-width: 1400px) {
+  .hour-info:nth-of-type(3n){
+    border-right: none;
   }
 }
