--- a/src/components/LocationCurrent/style.css
+++ b/src/components/LocationCurrent/style.css
@@ -1,9 +1,13 @@
 .location-current{
-    background-color: #ffffff83;
-    border-radius: 7px;
-    height: 40%;
-    width: 100%;
-    border: 1px solid #19191920;
+  height: 40%;
+  width: 100%;
+/* From https://css.glass */
+background: rgba(255, 255, 255, 0.2);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border: 1px solid rgba(255, 255, 255, 0.3);
   }
   
   .location-current > div{
