--- a/src/App.css
+++ b/src/App.css
@@ -191,11 +191,13 @@ i {
   /*  border: 1px solid #19191920; */
 }
 
-.credits{
+.credits > div{
   background: url(assets/weather-api-logo-no-bg.png);
   object-fit: cover;
   background-repeat: no-repeat;
   background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .credits p{
@@ -291,7 +293,7 @@ i {
     width: 80%;
   }
 
-  .credits{
+  .credits > div{
     background-size: contain;
   }
 
